# VulkanTemplate

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE-MIT.md  LICENSE.md  README.md
application/: CMakeLists.txt  main.cpp
assets/: sphere.glb
cmake/: clang-format.cmake  clang-tidy.cmake  dependencies.cmake  include-what-you-use.cmake
iwyu/: glm.functions.imp  glm.imp  glm.matrix.imp  glm.quaternion.imp  glm.vector.imp  integers.imp  mappings.imp  std.imp  vulkan.imp
shaders/: .clang-format  CMakeLists.txt  compile_shaders.py  geometry.frag.spv  geometry.vert  geometry.vert.spv  oetf_srgb.comp  oetf_srgb.comp.spv  testpattern.comp  testpattern.comp.spv
shaders/deferred/: gbuffer.frag  gbuffer.frag.spv  gbuffer.no_textures.frag.spv  gbuffer.no_textures.vert.spv  gbuffer.textures.frag.spv  gbuffer.textures.vert.spv  gbuffer.vert  gbuffer.vert.spv  light.comp  light.comp.spv  ssao.comp  ssao.comp.spv
shaders/gaussian_blur/: gaussian_blur.comp  gaussian_blur.horizontal.comp.spv  gaussian_blur.vertical.comp.spv  gaussian_blur_vert.comp  gaussian_blur_vert.comp.spv
shaders/shadowmapping/: offscreen.vert  offscreen.vert.spv
shaders/transfer/: oetf_pure_gamma.comp  oetf_pure_gamma.comp.spv  oetf_srgb.comp  oetf_srgb.comp.spv
vulkan_template/: CMakeLists.txt
vulkan_template/include/vulkan_template/: VulkanTemplate.hpp
vulkan_template/source/vulkan_template/: VulkanTemplate.cpp
vulkan_template/source/vulkan_template/app/: DescriptorAllocator.cpp  DescriptorAllocator.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GBuffer.cpp  GBuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  LightingPass.cpp  LightingPass.hpp  Mesh.cpp  Mesh.hpp  PostProcess.cpp  PostProcess.hpp  PropertyTable.cpp  PropertyTable.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneTexture.cpp  SceneTexture.hpp  Swapchain.cpp  Swapchain.hpp  UILayer.cpp  UILayer.hpp
vulkan_template/source/vulkan_template/app_resources/: DescriptorAllocator.cpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  PlatformWindow.cpp  PlatformWindow.hpp  PostProcess.cpp  PostProcess.hpp  Renderer.cpp  Renderer.hpp  SceneTexture.cpp  SceneTexture.hpp  Swapchain.cpp  Swapchain.hpp  UILayer.cpp  UILayer.hpp
vulkan_template/source/vulkan_template/core/: Integer.hpp  Log.cpp  Log.hpp  UIRectangle.hpp  UIWindowScope.cpp  UIWindowScope.hpp
vulkan_template/source/vulkan_template/platform/: PlatformUtils.hpp  PlatformUtilsWindows.cpp
vulkan_template/source/vulkan_template/vulkan/: BufferAllocation.cpp  BufferAllocation.hpp  Buffers.cpp  Buffers.hpp  Image.cpp  Image.hpp  ImageOperations.cpp  ImageOperations.hpp  ImageView.cpp  ImageView.hpp  Immediate.cpp  Immediate.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp  VulkanMacros.hpp  VulkanOverloads.hpp  VulkanStructs.cpp  VulkanStructs.hpp  VulkanUsage.cpp  VulkanUsage.hpp
